# libuv-app

./: CMakeLists.txt  README.md  list.c  main-client.c  main-server.c  main.c  utils.h
libuv/include/: uv.h
libuv/src/: uv-common.c
libuv/src/unix/: core.c
nonblock_write/: client.c2  events.c2  logger.c2  recipe.txt  server.c2  tcp_client.c2  tcp_server.c2
